# qa_guru_8_18_homework

./: pyproject.toml
