[tool.poetry]
name = "qa_guru_8_18_homework"
version = "0.1.0"
description = "Проект homework созданный с poetry"
authors = ["aistabk <elizavetasoom@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0rc4"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
